eve4pve-barc (0.1.4)

  * Add reset command remove all snapshots on images
  * Remove control qm agent enabled
  * Add hook in restore procedure
  * Add --unprotect-snap parameter disable protection snap

 -- EnterpriseVE Support Team <support@enterpriseve.com>  04 Apr 2017
 
 eve4pve-barc (0.1.3)

  * Support krbd flag
  * Add all-^??? hostname 

 -- EnterpriseVE Support Team <support@enterpriseve.com>  13 Feb 2017

eve4pve-barc (0.1.2)

  * Export any vm in cluster
  * Add size of backup in status
  * Remove export EVE4PVE_BARC_VMTECNOLOGY

 -- EnterpriseVE Support Team <support@enterpriseve.com>  09 Feb 2017

eve4pve-barc (0.1.1)

  * Multiple VM single execution
  * Copy config and firewall files
  * Fix verify disk ceph
  * Improve code

 -- EnterpriseVE Support Team <support@enterpriseve.com>  08 Feb 2017

 eve4pve-barc (0.1.0-1)

  * Initial implementation fanstatic code
  
 -- EnterpriseVE Support Team <support@enterpriseve.com>  11 Jan 2017